Correct spacing on all nav bars

--- a/src/main/resources/static/css/landing.css
+++ b/src/main/resources/static/css/landing.css
@@ -3,7 +3,6 @@
 }
 
 #header {
-    /*background-image:;*/
     height: 70vh;
     background-image: url("../img/landingbg.jpg");
     background-repeat: no-repeat;
@@ -11,13 +10,15 @@
     background-position: center;
     z-index: -1;
 }
+
 #nav, #main-nav {
     z-index: 2;
 }
 
-#main-nav {
+#main-nav, #dash-nav {
     background: var(--navigation);
 }
+
 .navbar-nav li a {
     margin-right: 20px;
     text-shadow: 1px 1px 5px #000;
@@ -27,7 +28,7 @@
 .navbar-brand img {
     width: 60px;
     margin-top: 30px;
-    margin-top: 10px;
+    vertical-align: middle;
 }
 
 #nav.fixed-top.scrolled {
@@ -36,12 +37,23 @@
     opacity: 0.9;
 }
 
+.avatar {
+    vertical-align: middle;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+}
+
+#dash-nav {
+
+}
+
 .welcome {
     padding: 50px 80px;
     margin-top: -140px;
     background-color: #fff;
     box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.2);
-    border-radius: 200px 20px;
+    border-radius: 200px 200px 0px 0px;
 }
 
 .welcome h1 {
@@ -93,7 +105,6 @@
     margin: 1rem 0;
 }
 
-
 .slide-nav .nav-item a {
     text-decoration: none;
     color: #0e4f1f;
@@ -105,11 +116,32 @@
     width: 200px;
     height: 200px
 }
+
 .open {
     display: block;
 }
 
+.toggle-button {
+    width: 2rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+}
 
+.toggle-button:focus {
+    outline: none;
+}
+
+.toggle-button__bar {
+    width: 100%;
+    height: 0.2rem;
+    background: black;
+    display: block;
+    margin: 0.4rem 0;
+}
 
 .draw-border {
     box-shadow: inset 0 0 0 4px #58afd1;
@@ -117,6 +149,7 @@
     transition: color 0.25s 0.0833333333s;
     position: relative;
 }
+
 .draw-border::before, .draw-border::after {
     border: 0 solid transparent;
     box-sizing: border-box;
@@ -128,6 +161,7 @@
     bottom: 0;
     right: 0;
 }
+
 .draw-border::before {
     border-bottom-width: 4px;
     border-left-width: 4px;
@@ -166,13 +200,13 @@
 }
 
 .sidebar {
+    background: var(--navigation);
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 100;
-    padding: 70px 0 0 10px;
-    border-right: 1px solid #d3d3d3;
+    z-index: 2;
+    padding: 100px 0 0 10px;
 }
 
 .sidebar-left {
@@ -190,3 +224,7 @@
     padding-top: 90px;
 }
 
+.justify-content-evenly {
+    gap: 20px;
+    justify-content: space-evenly;
+}
